--- a/styles/lsd.css
+++ b/styles/lsd.css
@@ -1,4 +1,5 @@
 .lsd-slider-vertical {
+  position: relative;
   width: .4em;
   height: 200px;
   border-radius: .4em;
@@ -14,7 +15,7 @@
   cursor: default;
   -ms-touch-action: none;
   touch-action: none;
-  left: -.04em;
+  left: -.54em;
   margin-left: 0;
   margin-bottom: -.4em;
   border-radius: 50%;
