--- a/styles/lsd.css
+++ b/styles/lsd.css
@@ -1,12 +1,11 @@
-.lsd-slider-vertical {
+.lsd-slider {
   position: relative;
-  width: 5px;
   border-radius: 5px;
   background-color: #E3DDD8;
   z-index: 1;
 }
 
-.lsd-slider-vertical .lsd-slider-thumb {
+.lsd-slider .lsd-slider-thumb {
   position: absolute;
   z-index: 2;
   width: 16px;
@@ -14,18 +13,15 @@
   cursor: default;
   -ms-touch-action: none;
   touch-action: none;
-  left: -8.64px;
-  margin-left: 0;
-  margin-bottom: 8.64px;
   border-radius: 50%;
 }
 
-.lsd-moon-handle {
+.lsd-moon-thumb {
   border: 4px solid darkGrey;
   background-color: #FFFDF2;
 }
 
-.lsd-sun-handle {
+.lsd-sun-thumb {
   background-color: #F5EB42;
   border: 4px solid #E4C74D;
 }
