--- a/styles/lsd.css
+++ b/styles/lsd.css
@@ -5,7 +5,7 @@
   z-index: 1;
 }
 
-.lsd-slider .lsd-slider-thumb {
+.lsd-slider .lsd-slider-handle {
   position: absolute;
   z-index: 2;
   width: 16px;
@@ -16,12 +16,12 @@
   border-radius: 50%;
 }
 
-.lsd-moon-thumb {
+.lsd-moon-handle {
   border: 4px solid darkGrey;
   background-color: #FFFDF2;
 }
 
-.lsd-sun-thumb {
+.lsd-sun-handle {
   background-color: #F5EB42;
   border: 4px solid #E4C74D;
 }
