Set font to Canter.

--- a/styles/lsd.css
+++ b/styles/lsd.css
@@ -1,7 +1,7 @@
 body {
   background-color: #485451;
   color: white;//#adb6b9;
-  font-family: 'Basic', sans-serif;
+  font-family: 'CanterBold', sans-serif;
 }
 
 .lsd-slider {
